# rust-wasm-webgl-playground

./: Cargo.toml  localdev.sh  readme.md
src/: lib.rs
web/: index.html  main.js
