[package]
name = "webassembly-webgl-viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"
js-sys = "0.3"
[dependencies.web-sys]
version = "0.3"
features = [
  'Document', 
  'Window', 
  'HtmlCanvasElement' ,
  'WebGlRenderingContext', 
  'WebGl2RenderingContext', 
  'WebGlProgram', 
  'WebGlShader', 
  'WebGlBuffer', 
  'WebGlUniformLocation'
]